Fix crash on autosave recovery

BUG:362540